--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   file_picker: ^5.2.5
   menu_bar: ^0.4.0
   intl: ^0.17.0
-
+  easy_localization: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -29,4 +29,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-
+  assets:
+    - assets/translations/
