--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   code_text_field: ^1.0.0
 
   easy_localization: ^3.0.1
+  flutter_riverpod: ^2.3.0
+  window_manager: ^0.3.1
+  bitsdojo_window: ^0.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
