Добавлена поддержка шрифтов

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,3 +36,19 @@ flutter:
   uses-material-design: true
   assets:
     - assets/translations/
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: fonts/Raleway-Regular.ttf
+        - asset: fonts/Raleway-Bold.ttf
+        - asset: fonts/Raleway-Italic.ttf
+    - family: RobotoMono
+      fonts:
+        - asset: fonts/RobotoMono-Regular.ttf
+        - asset: fonts/RobotoMono-Bold.ttf
+        - asset: fonts/RobotoMono-Italic.ttf
+    - family: TimesNewRoman
+      fonts:
+        - asset: fonts/TimesNewRoman-Regular.ttf
+        - asset: fonts/TimesNewRoman-Italic.ttf
+        - asset: fonts/TimesNewRoman-Bold.ttf
