--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_riverpod: ^2.3.0
   window_manager: ^0.3.1
   bitsdojo_window: ^0.1.5
+  file_saver: ^0.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
